--- a/praktikum/week5/intropython.ipynb
+++ b/praktikum/week5/intropython.ipynb
@@ -137,20 +137,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Halo, World\n",
+      "Disini kita coba tipe data string dalam beberapa baris,\n",
+      "Ini baris 1,\n",
+      "ini baris 2,\n",
+      "dan ini baris 3.\n",
+      "ello\n",
       "<class 'int'>\n",
       "<class 'int'>\n",
       "<class 'int'>\n",
       "<class 'float'>\n",
       "<class 'float'>\n",
       "<class 'float'>\n",
-      "<class 'float'>\n"
+      "<class 'float'>\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -189,7 +202,177 @@
     "print(type(x))\n",
     "print(type(y))\n",
     "print(type(z))\n",
-    "print(type(ze))"
+    "print(type(ze))\n",
+    "\n",
+    "# Boolean\n",
+    "print(10 > 9)\n",
+    "print(10 == 9)\n",
+    "print(10 < 9)\n",
+    "\n",
+    "print(bool(\"Hello\"))\n",
+    "print(bool(15))\n",
+    "print(bool(-1))\n",
+    "print(bool(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n",
+      "['apple', 'banana', 'cherry', 'apple', 'cherry']\n",
+      "apple\n",
+      "cherry\n",
+      "['apple', 'blackcurrant', 'watermelon', 'Durian', 'orange', 'kiwi', 'mango']\n",
+      "['apple', 'banana', 'cherry', 'orange']\n",
+      "['apple', 'orange', 'banana', 'cherry']\n",
+      "['apple', 'banana', 'cherry', 'mango', 'pineapple', 'papaya']\n",
+      "['apple', 'cherry']\n",
+      "['apple', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(thislist)\n",
+    "thislist2 = [\"apple\", \"banana\", \"cherry\", \"apple\", \"cherry\"]\n",
+    "print(thislist2)\n",
+    "\n",
+    "#Isi dari komponen list bisa untuk beberapa tipe data\n",
+    "list1 = [\"apple\", \"banana\", \"cherry\"]\n",
+    "list2 = [1, 5, 7, 9, 3]\n",
+    "list3 = [True, False, False]\n",
+    "list4 = [\"abc\", 34, True, 40, \"male\"] #Campuran\n",
+    "\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(thislist[0])\n",
+    "thislist1 = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(thislist1[-1])\n",
+    "\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"mango\"]\n",
+    "thislist[1:3] = [\"blackcurrant\", \"watermelon\",\"Durian\"]\n",
+    "print(thislist)\n",
+    "\n",
+    "# Tambah Item Pada List\n",
+    "thislist1 = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist1.append(\"orange\")\n",
+    "print(thislist1)\n",
+    "\n",
+    "# Insert Item Pada List\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist.insert(1, \"orange\")\n",
+    "print(thislist)\n",
+    "\n",
+    "# Extend list\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "tropical = [\"mango\", \"pineapple\", \"papaya\"]\n",
+    "thislist.extend(tropical)\n",
+    "print(thislist)\n",
+    "\n",
+    "# Remove List\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist.remove(\"banana\")\n",
+    "print(thislist)\n",
+    "\n",
+    "# Remove List Berdasarkan Index\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist.pop(1)\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry')\n",
+      "<class 'str'>\n",
+      "<class 'tuple'>\n",
+      "('apple', 'banana', 'cherry', 'orange')\n",
+      "('banana', 'cherry')\n"
+     ]
+    }
+   ],
+   "source": [
+    "thistuple = (\"apple\", \"banana\", \"cherry\")\n",
+    "print(thistuple)\n",
+    "\n",
+    "#NOT a tuple\n",
+    "thistuple = (\"apple\")\n",
+    "print(type(thistuple))\n",
+    "\n",
+    "# a tuple\n",
+    "thistuple = (\"apple\",)\n",
+    "print(type(thistuple))\n",
+    "\n",
+    "# Add Tupples Item\n",
+    "thistuple = (\"apple\", \"banana\", \"cherry\")\n",
+    "y = list(thistuple)\n",
+    "y.append(\"orange\")\n",
+    "thistuple = tuple(y)\n",
+    "print(thistuple)\n",
+    "\n",
+    "# Remove Tupples Item\n",
+    "thistuple = (\"apple\", \"banana\", \"cherry\")\n",
+    "y = list(thistuple)\n",
+    "y.remove(\"apple\")\n",
+    "thistuple = tuple(y)\n",
+    "print(thistuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'cherry', 'apple'}\n",
+      "{'banana', 'cherry', 'apple'}\n",
+      "{False, True, 'cherry', 'apple', 'banana'}\n",
+      "{'banana', 'cherry', 'apple', 'orange'}\n",
+      "{'cherry', 'mango', 'apple', 'papaya', 'banana', 'pineapple'}\n",
+      "{'cherry', 'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(thisset)\n",
+    "\n",
+    "# Gabisa mengandung data duplicate\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\", \"apple\"}\n",
+    "print(thisset)\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\", False, True, 0}\n",
+    "print(thisset)\n",
+    "\n",
+    "# Add Set\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.add(\"orange\")\n",
+    "print(thisset)\n",
+    "\n",
+    "# Add Set With Set\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "tropical = {\"pineapple\", \"mango\", \"papaya\"}\n",
+    "thisset.update(tropical)\n",
+    "print(thisset)\n",
+    "\n",
+    "# Remove Set Item\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.remove(\"banana\")\n",
+    "print(thisset)"
    ]
   },
   {
